refactor: simplified command layout